--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,23 +1,10 @@
+## PostgreSQL
 spring.datasource.url=jdbc:postgresql://localhost:5432/hattrick
 spring.datasource.username=jean
 spring.datasource.password=jcsantos25
-spring.datasource.driver-class-name=org.postgresql.Driver
-# Keep the connection alive if idle for a long time (needed in production)
-spring.datasource.testWhileIdle=true
-spring.datasource.validationQuery=SELECT 1
 
-# ===============================
-# = JPA / HIBERNATE
-# ===============================
-# Show or not log for each sql query
-spring.jpa.show-sql=true
-# Hibernate ddl auto (create, create-drop, update): with "create-drop" the database
-# schema will be automatically created afresh for every start of application
-spring.jpa.hibernate.ddl-auto=update
-
-# Naming strategy
-spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyHbmImpl
-spring.jpa.hibernate.naming.physical-strategy=org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy
-
-# Allows Hibernate to generate SQL optimized for a particular DBMS
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+# jpa
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL92Dialect
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.format_sql=true
